<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServicoActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/descricao_head_servicos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/detalhe_servico" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="159dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="159dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:paddingTop="@dimen/padding_top_titulos"
        android:text="@string/servicos_detalhes"
        android:textColor="#000000"
        android:textSize="@dimen/tamanho_titulos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="277dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="277dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/texto_consultoria"
        android:textColor="#000000"
        android:textSize="@dimen/tamanho_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="277dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="277dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="41dp"
        android:text="@string/texto_acompanhamento_projetos"
        android:textColor="#000000"
        android:textSize="@dimen/tamanho_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="277dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="277dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="41dp"
        android:text="@string/texto_processos"
        android:textColor="#000000"
        android:textSize="@dimen/tamanho_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</android.support.constraint.ConstraintLayout>