<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/descricao_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/empresaId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="59dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/descricao_botao_empresa"
        app:layout_constraintEnd_toStartOf="@+id/servicoId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/menu_empresa" />

    <ImageView
        android:id="@+id/servicoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="59dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="59dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/descricao_botao_servico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/empresaId"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/menu_servico" />

    <ImageView
        android:id="@+id/clienteId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="101dp"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="59dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/descricao_botao_cliente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contatoId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empresaId"
        app:srcCompat="@drawable/menu_cliente" />

    <ImageView
        android:id="@+id/contatoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="101dp"
        android:layout_marginEnd="59dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="59dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/descricao_botao_contato"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/clienteId"
        app:layout_constraintTop_toBottomOf="@+id/servicoId"
        app:srcCompat="@drawable/menu_contato" />
</android.support.constraint.ConstraintLayout>