<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".EmpresaActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="85dp"
        android:layout_height="79dp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/descricao_head_empresa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/detalhe_empresa" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="208dp"
        android:layout_height="78dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:paddingTop="@dimen/padding_top_titulos"
        android:text="@string/empresa_detalhes"
        android:textColor="#000000"
        android:textSize="@dimen/tamanho_titulos"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="308dp"
        android:layout_height="334dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/texto_lorem"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="135dp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>